--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">smarTravel</string>
+    <string name="Profile">Profile</string>
+    <string name="History">History</string>
+    <string name="Upcoming">Upcoming</string>
+    <string name="Favorites">Favorites</string>
 </resources>
