add Activity main and Basic Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="History">History</string>
     <string name="Upcoming">Upcoming</string>
     <string name="Favorites">Favorites</string>
+    <string name="Rates">Rates</string>
+    <string name="Settings">Settings</string>
+    <string name="LogOut">Log Out</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
