--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,33 @@
     <string name="LogOut">Log Out</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="userName">User Name</string>
+    <string name="firstName">First Name</string>
+    <string name="userFirstName">userFirstName</string>
+    <string name="lastName">Last Name</string>
+    <string name="userLastName">userLastName</string>
+    <string name="email">Email</string>
+    <string name="userEmail">userEmail</string>
+    <string name="yearBirth">Year Of Birth</string>
+    <string name="userYearBirth">userYearBirth</string>
+    <string name="gender">Gender</string>
+    <string name="userGender">userGender</string>
+    <string name="editProfile">Edit Profile</string>
+    <string name="updateProfile">Update Profile</string>
+
+
+
+    <string-array name="year_of_birth">
+        <item>1995</item>
+        <item>1996</item>
+        <item>1997</item>
+        <item>1998</item>
+        <item>1999</item>
+        <item>2000</item>
+        <item>2001</item>
+        <item>2002</item>
+        <item>2003</item>
+        <item>2004</item>
+        <item>2005</item>
+    </string-array>
 </resources>
