--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="Profile">Profile</string>
     <string name="History">History</string>
     <string name="Upcoming">Upcoming</string>
-    <string name="Favorites">Favorites</string>
+    <string name="MyPlaces">My Places</string>
     <string name="Rates">Rates</string>
     <string name="Settings">Settings</string>
     <string name="LogOut">Log Out</string>
